2001-10-26	Andy Piper	<andy.piper@freeuk.com>

	* THANKS, src/about.c: corrections and additions following 
	Naba's big update
	* src/main_menubar.c: patch from Rikul to fix the problem with 
	menu accelerators not being loaded

2001-10-26  Naba Kumar <kh_naba@users.sourceforge.net>

	* THANKS: Added all contributors and translators names and emails.
	* AUTHORS: Updated
	* pixmap/anjuta_logo.png: Reduced the size of the logo.
	* pixmap/anjuta_splash.png, pixmaps/Makefile.am:
	      Added new file (earlier logo with border).
	* src/about.c: Added all contributors names and emails
	      and used macro definition for logo pixmap file.
	* src/pixmaps.h: Added entry for anjuta splash screen.

2001-10-24	Andy Piper	<andy.piper@freeuk.com>

	* pixmaps/anjuta_icon[.xpm|.png]: updated application icon
	to new PNG version (thanks to Misha) and removed the old
	pixmap.

2001-10-24  Abel Cheung  <maddog@linux.org.hk>

	* THANKS: added Conner Mo for simplified Chinese translation.
	* configure.in: added zh_CN in ALL_LINGUAS

2001-10-21  Abel Cheung  <maddog@linux.org.hk>

	* THANKS: added Joe Man for his traditional Chinese translation.
	* configure.in: added zh_TW in ALL_LINGUAS.

2001-10-19  Naba Kumar <kh_naba@users.sourceforge.net>

	* src/main_menubar_def.h: Changed the link of lidn to
	http://lidn.sourceforge.net.
	
2001-10-18  Naba Kumar <kh_naba@users.sourceforge.net>

	* Applied patch from Rikul
	* Applied patch from Luca
	* Fixed a cvs conflict. :)

2001-10-17  Stephane Demurget  <demurgets@free.fr>

	* THANKS: added Marc Botermans for his Dutch translation.

	* configure.in: added nl in ALL_LINGUAS.

	* po/nl.po: added.

2001-10-17  Naba Kumar <kh_naba@users.sourceforge.net>

	* anjuta.c: Fixed luca's typo.
	* resources.c, resources.h: Changed gchar* return to void, to
		avoid a compiler warning.
	* scintilla/Makefile.am: Reorganized file entries.
	* src/Makefile.am: Added StyleContex.o module directly with the lexers.
